--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.29.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
